[package]
name = "wasm"
version = "0.1.0"
authors = ["Some Cat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
base64 = "0.13.0"
image = "0.23.12"

# [profile.release]
# lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
